# scorify

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  pytest.ini  requirements-dev.txt  runtests.py  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
examples/: data1.csv  multi.csv  neurohack_April+2,+2019_11.05.csv  neurohack_output.csv  neurohack_scoresheet.csv  scoresheet1.csv  test_alpha_data.csv  test_alpha_scoresheet.csv
examples/multi/: score_ffmq.csv  score_panas.csv  t1_raw_data.csv  t2_raw_data.csv
scorify/: __init__.py  _metadata.py  aggregators.py  datafile.py  directives.py  errors.py  excel_reader.py  info.py  mappings.py  reliability.py  score_data.py  scorer.py  scoresheet.py  utils.py
scorify/scripts/: score_data.py  score_multi.py
src/scorify/: __init__.py  _metadata.py  aggregators.py  datafile.py  directives.py  mappings.py  scorer.py
src/scorify/scripts/: score_data.py
tests/: base.py  test_aggregators.py  test_datafile.py  test_directives.py  test_integration.py  test_mappings.py  test_reliability.py  test_score_multi.py  test_scorer.py  test_scoresheet.py  test_utils.py
tests/input/: 001_scoresheet.csv  002_broken_scoresheet.csv  003_data.xlsx  003_expected.xlsx  003_scoresheet.xlsx  004_broken_scoresheet.xlsx  004_expected.csv  005_expected.csv  005_scoresheet.csv  1_expected.csv
tests/multi/: data_t1.csv  data_t2.csv  score_bfi.csv  score_panas.csv  success.csv
