[metadata]
name = scorify
url = https://github.com/uwmadison-chm/scorify
download_url = https://github.com/uwmadison-chm/scorify/releases
author = Nate Vack
author_email = njvack@wisc.edu
maintainer = Nate Vack
maintainer_email = njvack@wisc.edu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Information Analysis
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent

license = MIT
description = Library for scoring questionnaires
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides =
    bioread

[options]
install_requires =
    schema >= 0.7.0
    openpyxl >= 3.0.0
    docopt >= 0.6.1
    pandas >= 1.3.5
    scipy >= 1.7.3
zip_safe = False
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    score_data=scorify.score_data:main
    reliability=scorify.reliability:main
